# sandwichnews.org

./: .gitignore  blog.py  buildspec.yml  deploy.sh  justfile  mdx_imagecaption.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy.yml
pages/: index.html  rss.xml
pages/posts/2010/08/13/: hackday-analog-meters.md
pages/posts/2011/10/10/: the-story-of-hod.html  the-story-of-hod.md
pages/posts/2011/11/01/: 5-minute-web-framework-review.md
pages/posts/2011/12/17/: coles-sandwiches.html  coles-sandwiches.md
pages/posts/2011/12/18/: downtown-la-breakfast.html  downtown-la-breakfast.md
pages/posts/2012/03/13/: on-code-reviews-and-developer-feedback.html  on-code-reviews-and-developer-feedback.md
pages/posts/2012/06/13/: golden-rule-of-programming-style.html  golden-rule-of-programming-style.md
pages/posts/2012/06/14/: aws-billing-info-in-hive.html
pages/posts/2012/07/08/: roast-pork-@-tommy-dinics.html  roast-pork-@-tommy-dinics.md
pages/posts/2012/07/15/: manly-burger-@-unami-burger.html  manly-burger-@-unami-burger.md
pages/posts/2013/02/15/: reader-driven-development.html  reader-driven-development.md
pages/posts/2014/02/14/: crucible-survivor-code-review-dashboard.html  crucible-survivor-code-review-dashboard.md
pages/posts/2014/02/26/: args4j-helpers.html  args4j-helpers.md
pages/posts/drafts/: how-i-make-podcasts.html
plugins/: blog.py
static/css/: blog.css
templates/: _list.html  base.html  blog.html  index.html  page.html  rss.xml  tag.html
templates/cat/: _photography.html  _sandwich.html
(+25 files in other folders)
