[project]
name = "sandwichnews"
version = "1.0.0"
description = "source for sandwichnews.org"
authors = [
    "Larry Ogrodnek <ogrodnek@gmail.com>",
]

readme = { file = "readme.md" }
repository = { type = "git", url = "https://github.com/ogrodnek/sandwichnews.org" }

requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-flatpages>=0.8.0",
    "frozen-flask>=1.0.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Target Python 3.12
target-version = "py312"

# Line length to match common Python conventions
line-length = 100

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore specific rules if needed
ignore = [
    "N802",  # Allow camelCase function names (required by Markdown API)
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
